fix horizontal scroll

--- a/src/App.css
+++ b/src/App.css
@@ -54,19 +54,6 @@ body {
   text-align: center;
   flex-direction: column;
 }
-.techStack {
-  display: grid;
-  grid-template-columns: 142px 142px 142px 142px;
-  gap: 10px;
-  margin: 10px;
-}
-.techStack li {
-  list-style-type: none;
-  text-align: left;
-}
-.techStack li::before {
-  content: "▹    "
-}
 
 ::selection{
   background: #BBF7D0;
@@ -76,10 +63,6 @@ h1, p, li {
   color: white;
 }
 
-.techStack li::before {
-  content: "▹    ";
-  color: white;
-}
 
 .aboutText {
   color: white;
